добавлены тесты и main